--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"start": "webpack serve --mode development",
 		"test": "npx jest",
 		"build": "email build",
-  "dev": "ts-node buildconfig.ts --watch",
+		"dev": "ts-node buildconfig.ts --watch",
 		"export": "email export"
 	},
 	"repository": {
@@ -35,6 +35,7 @@
 		"@types/react": "18.2.33",
 		"@types/react-dom": "18.2.14",
 		"file-loader": "^6.2.0",
+		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
 		"url-loader": "^4.1.1",
 		"webpack": "^5.92.1",
@@ -42,9 +43,11 @@
 		"webpack-dev-server": "^5.0.4"
 	},
 	"compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-		"@/*": ["*"]
-    }
-}
+		"baseUrl": ".",
+		"paths": {
+			"@/*": [
+				"*"
+			]
+		}
+	}
 }
