--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "gb-fe-email",
 	"version": "1.0.0",
+	"type": "module",
 	"description": "Gobubble email UI",
 	"main": "index.js",
 	"scripts": {
@@ -34,6 +35,7 @@
 	"devDependencies": {
 		"@types/react": "18.2.33",
 		"@types/react-dom": "18.2.14",
+		"esbuild-plugin-inline-image": "^0.0.9",
 		"file-loader": "^6.2.0",
 		"ts-node": "^10.9.2",
 		"tsconfig-paths": "^4.2.0",
@@ -43,11 +45,15 @@
 		"webpack-dev-server": "^5.0.4"
 	},
 	"compilerOptions": {
-		"baseUrl": ".",
-		"paths": {
-			"@/*": [
-				"*"
-			]
-		}
-	}
+		"target": "ES2020",
+		"module": "ESNext",
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"strict": true,
+		"jsx": "react",
+		"allowJs": true,
+		"outDir": "./dist"
+	  },
+	  "include": ["**/*.ts", "**/*.tsx", "global.d.ts"],
+	  "exclude": ["node_modules"]
 }
