--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "strict": true,
     "jsx": "react",
     "allowJs": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["*"]
+    }
   },
   "include": ["**/*.ts", "**/*.tsx", "global.d.ts"],
   "exclude": ["node_modules"]
