--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-email": "2.1.5"
   },
   "devDependencies": {
+    "@gobubbledev/fe-components": "0.3.44",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
     "prettier": "^3.3.2"
